--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>nom.aob</groupId>
     <artifactId>sb-bench</artifactId>
     <packaging>jar</packaging>
-    <version>0.12</version>
+    <version>0.12-customjib</version>
     <name>${project.artifactId}</name>
 
     <properties>
@@ -25,6 +25,9 @@
         <docker.image.tag>${project.version}</docker.image.tag>
 
         <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
+
+        <google.jib.version>3.1.3</google.jib.version>
+<!--        <google.jib.version>2.7.1</google.jib.version>-->
     </properties>
 
     <parent>
@@ -82,10 +85,12 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>2.7.1</version>
+                <version>${google.jib.version}</version>
+
                 <configuration>
                     <from>
-                        <image>adoptopenjdk:8u275-b01-jre-openj9-0.23.0@sha256:81554eca4e04335c33537561607efdcd06a8acd00d2e9eda6a6d094150154627</image>
+<!--                        <image>adoptopenjdk:8u275-b01-jre-openj9-0.23.0@sha256:81554eca4e04335c33537561607efdcd06a8acd00d2e9eda6a6d094150154627</image>-->
+                        <image>adoptopenjdk/openjdk8:jre8u282-b08</image>
                     </from>
                     <to>
                         <image>registry.hub.docker.com/basakil/${docker.image.name}:${docker.image.tag}</image>
@@ -93,7 +98,30 @@
                             <tag>latest</tag>
                         </tags>
                     </to>
+
+                    <container>
+                        <!-- Assumes you have /bin/sh as specified at the top of /my-entrypoint.sh. -->
+                        <entrypoint>/service-aware-entrypoint.sh</entrypoint>
+                    </container>
+                    <!-- You also need to make the script executable. -->
+                    <extraDirectories>
+                        <permissions>
+                            <permission>
+                                <file>/service-aware-entrypoint.sh</file>
+                                <mode>755</mode>
+                            </permission>
+                        </permissions>
+                    </extraDirectories>
+
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
