--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>nom.aob</groupId>
     <artifactId>sb-bench</artifactId>
     <packaging>jar</packaging>
-    <version>0.12-customjib</version>
+    <version>0.14</version>
     <name>${project.artifactId}</name>
 
     <properties>
@@ -61,6 +61,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 <!--        will -probably- used in the future.. -->
         <dependency>
