--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>nom.aob</groupId>
     <artifactId>sb-bench</artifactId>
     <packaging>jar</packaging>
-    <version>0.14</version>
+    <version>0.24</version>
     <name>${project.artifactId}</name>
 
     <properties>
@@ -24,7 +24,7 @@
         <docker.image.name>${project.artifactId}</docker.image.name>
         <docker.image.tag>${project.version}</docker.image.tag>
 
-        <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
+        <spring-cloud.version>2021.0.5</spring-cloud.version>
 
         <google.jib.version>3.1.3</google.jib.version>
 <!--        <google.jib.version>2.7.1</google.jib.version>-->
@@ -33,7 +33,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.1.RELEASE</version>
+        <version>2.7.2</version>
     </parent>
 
     <dependencyManagement>
@@ -49,6 +49,24 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+<!--            <version>1.3.5</version>-->
+            <!-- Use runtime scope if the project does not have any compile-time usage of logback,
+                 such as implementations of Appender, Encoder, Layout, TurboFilter, etc
+            <scope>runtime</scope>
+            -->
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -71,6 +89,12 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -94,7 +118,8 @@
                 <configuration>
                     <from>
 <!--                        <image>adoptopenjdk:8u275-b01-jre-openj9-0.23.0@sha256:81554eca4e04335c33537561607efdcd06a8acd00d2e9eda6a6d094150154627</image>-->
-                        <image>adoptopenjdk/openjdk8:jre8u282-b08</image>
+                        <!-- <image>adoptopenjdk/openjdk8:jre8u282-b08</image> -->
+                        <image>eclipse-temurin:8u362-b09-jdk-focal</image>
                     </from>
                     <to>
                         <image>registry.hub.docker.com/basakil/${docker.image.name}:${docker.image.tag}</image>
