--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>nom.aob</groupId>
     <artifactId>sb-bench</artifactId>
     <packaging>jar</packaging>
-    <version>0.15d</version>
+    <version>0.16-nje</version>
     <name>${project.artifactId}</name>
 
     <properties>
@@ -23,9 +23,10 @@
 
         <docker.image.name>${project.artifactId}</docker.image.name>
         <docker.image.tag>${project.version}</docker.image.tag>
-
+        <jib.registry.to>registry.hub.docker.com</jib.registry.to>
         <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
 
+<!--        <google.jib.version>3.4.0</google.jib.version>-->
         <google.jib.version>3.1.3</google.jib.version>
 <!--        <google.jib.version>2.7.1</google.jib.version>-->
     </properties>
@@ -82,6 +83,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
+            <version>1.18.28</version>
         </dependency>
     </dependencies>
 
@@ -100,11 +102,14 @@
 
                 <configuration>
                     <from>
-<!--                        <image>adoptopenjdk:8u275-b01-jre-openj9-0.23.0@sha256:81554eca4e04335c33537561607efdcd06a8acd00d2e9eda6a6d094150154627</image>-->
-                        <image>adoptopenjdk/openjdk8:jre8u282-b08</image>
+<!--                        docker pull adoptopenjdk/openjdk8:x86_64-ubuntu-jre8u392-b08 -->
+<!--                        <image>adoptopenjdk:8u275-b01-jre-openj9-0.23.0@sha256:81554eca4e04335c33537561607efdcd06a8acd00d2e9eda6a6d094150154627</image> -->
+<!--                        <image>adoptopenjdk/openjdk8:jre8u282-b08</image> -->
+                        <image>adoptopenjdk/openjdk8:x86_64-ubuntu-jre8u392-b08</image>
                     </from>
                     <to>
-                        <image>registry.hub.docker.com/basakil/${docker.image.name}:${docker.image.tag}</image>
+<!--                        <image>registry.hub.docker.com/basakil/${docker.image.name}:${docker.image.tag}</image>-->
+                        <image>${jib.registry.to}/basakil/${docker.image.name}:${docker.image.tag}</image>
                         <tags>
                             <tag>latest</tag>
                         </tags>
